--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     Developed by Alireza Lashkaripour
     Date: Nov. 2024
     Description: Web-based tool for generating input files for OpenQP.
+
+    "Nicholas Rego and David Koes
+    3Dmol.js: molecular visualization with WebGL
+    Bioinformatics (2015) 31 (8): 1322-1324 doi:10.1093/bioinformatics/btu829"
 -->
 <!DOCTYPE html>
 <html lang="en">
