--- a/index.html
+++ b/index.html
@@ -1487,39 +1487,49 @@ max_grad=1e-3
              }
         }
         async function submitJob() {
+            // Retrieve values from input fields
             const systemName = document.getElementById("systemName").value || "geo";
             const geometry = document.getElementById("geometry").value.trim();
             const inputContent = document.getElementById("inputPreview").value;
 
+            // Validate the input fields
             if (!geometry || !inputContent) {
                 alert("Please provide valid geometry and input files.");
                 return;
             }
 
+            // Create a FormData object to send the form data to the backend
             const formData = new FormData();
             formData.append("systemName", systemName);
             formData.append("geometry", geometry);
             formData.append("input", inputContent);
 
             try {
-                const response = await fetch("/submit-job", {
+                // Send a POST request to the backend
+                const response = await fetch("http://127.0.0.1:5000/submit-job", {
                     method: "POST",
                     body: formData,
                 });
-                const result = await response.json();
-                if (result.success) {
-                    alert("Job submitted successfully! Log file is being processed.");
-                    displayResults(result.logFile);
+
+                // Handle the server response
+                if (response.ok) {
+                    const result = await response.json(); // Parse the JSON response
+                    if (result.success) {
+                        alert("Job submitted successfully! Log file is being processed.");
+                        displayResults(result.logFile); // Process the returned log file
+                    } else {
+                        alert("Job submission failed: " + result.error);
+                    }
                 } else {
-                    alert("Failed to submit job: " + result.error);
+                    alert("Failed to connect to the server. Please check your connection and try again.");
                 }
             } catch (error) {
+                // Handle errors such as network issues
                 console.error("Error submitting job:", error);
-                alert("An error occurred while submitting the job.");
+                alert("An error occurred while submitting the job. Please check the console for more details.");
             }
         }
-
-        // Modified loadGeometryFromFile function
+       // Modified loadGeometryFromFile function
         function loadGeometryFromFile() {
             const fileInput = document.getElementById("loadGeometry");
             const geometryTextarea = document.getElementById("geometry");
