--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ button:active {
     font-size: 0.9rem;
     color: #2d3748;
     overflow-y: auto;
-    height: 500px;
+    height: 420px;
     white-space: pre-wrap;
 }
 
@@ -1128,6 +1128,9 @@ button:active {
             </textarea>
             <button type="button" onclick="saveAndDownloadFiles()">Save Input & Geometry</button>
             <button type="button" onclick="submitJob()">Run Calculation</button>
+            <div id="jobStatusContainer" style="margin-top: 1.5em;">
+                <h3>Job Status</h3>
+            </div>
             <div style="margin-top: 1.5em;">
                 <h3>Useful Links</h3>
                 <ul style="list-style-type: none; padding-left: 0; margin: 0;">
@@ -1504,6 +1507,31 @@ max_grad=1e-3
             formData.append("geometry", geometry);
             formData.append("input", inputContent);
 
+            // Create a new job status element dynamically
+            const jobStatusContainer = document.getElementById("jobStatusContainer");
+            const jobElement = document.createElement("div");
+            jobElement.id = `job-${systemName}`;
+            jobElement.style.border = "1px solid #ccc";
+            jobElement.style.padding = "1em";
+            jobElement.style.marginBottom = "1em";
+
+            // Add initial job status details
+            const currentTime = new Date();
+            jobElement.innerHTML = `
+                <p><strong>Job Name:</strong> ${systemName}</p>
+                <p><strong>Submission Date:</strong> ${currentTime.toLocaleString()}</p>
+                <p><strong>Status:</strong> <span id="status-${systemName}">Submitting...</span></p>
+                <p><strong>Elapsed Time:</strong> <span id="elapsed-${systemName}">0s</span></p>
+            `;
+            jobStatusContainer.appendChild(jobElement);
+
+            // Start tracking elapsed time
+            const startTime = Date.now();
+            const elapsedInterval = setInterval(() => {
+                const elapsedTime = Math.floor((Date.now() - startTime) / 1000);
+                document.getElementById(`elapsed-${systemName}`).textContent = `${elapsedTime}s`;
+            }, 1000);
+
             try {
                 // Send a POST request to the backend
                 const response = await fetch("http://127.0.0.1:5000/submit-job", {
@@ -1515,20 +1543,48 @@ max_grad=1e-3
                 if (response.ok) {
                     const result = await response.json(); // Parse the JSON response
                     if (result.success) {
-                        alert("Job submitted successfully! Log file is being processed.");
-                        displayResults(result.logFile); // Process the returned log file
+                        document.getElementById(`status-${systemName}`).textContent = "Completed";
+
+                        // Add download button for the log file
+                        const downloadButton = document.createElement("button");
+                        downloadButton.textContent = "Download Log File";
+                        downloadButton.style.marginTop = "1em";
+                        downloadButton.onclick = () => downloadLogFile(systemName, result.logFile);
+                        jobElement.appendChild(downloadButton);
                     } else {
-                        alert("Job submission failed: " + result.error);
+                        document.getElementById(`status-${systemName}`).textContent = `Failed: ${result.error}`;
+                        appendErrorDetails(jobElement, result.stderr || result.error);
                     }
                 } else {
-                    alert("Failed to connect to the server. Please check your connection and try again.");
+                    document.getElementById(`status-${systemName}`).textContent = "Failed to connect to server";
                 }
             } catch (error) {
-                // Handle errors such as network issues
                 console.error("Error submitting job:", error);
-                alert("An error occurred while submitting the job. Please check the console for more details.");
+                document.getElementById(`status-${systemName}`).textContent = "Error submitting job";
+                appendErrorDetails(jobElement, error.message);
+            } finally {
+                clearInterval(elapsedInterval); // Stop tracking elapsed time
             }
         }
+
+        function downloadLogFile(systemName, logContent) {
+            const blob = new Blob([logContent], { type: "text/plain" });
+            const link = document.createElement("a");
+            link.href = URL.createObjectURL(blob);
+            link.download = `${systemName}.log`;
+            link.click();
+            URL.revokeObjectURL(link.href);
+        }
+
+        function appendErrorDetails(jobElement, errorDetails) {
+            const errorDiv = document.createElement("div");
+            errorDiv.style.color = "red";
+            errorDiv.style.marginTop = "1em";
+            errorDiv.innerHTML = `<strong>Error Details:</strong><pre>${errorDetails}</pre>`;
+            jobElement.appendChild(errorDiv);
+        }
+
+
        // Modified loadGeometryFromFile function
         function loadGeometryFromFile() {
             const fileInput = document.getElementById("loadGeometry");
