--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@ max_grad=1e-3
             }, 1000);
 
             try {
-                const response = await fetch("http://127.0.0.1:5000/submit-job", {
+                const response = await fetch("https://<backend-public-url>/submit-job", {
                     method: "POST",
                     body: formData,
                 });
