--- a/index.html
+++ b/index.html
@@ -1014,10 +1014,10 @@ button:hover {
                 <input type="number" id="multiplicity" value="1" oninput="updateInputPreview()">
             </div>
 
-
-            <label for="nstate">Number of States for Response Theories:</label>
-            <input type="number" id="nstate" value="3"  oninput="updateInputPreview()">
-
+            <div style="margin-top: 1rem;">
+                <label for="nstate">Number of States for Response Theories:</label>
+                <input type="number" id="nstate" value="3" oninput="updateInputPreview()">
+            </div>
             <div style="display: inline-block; margin-right: 10px;">
                 <label for="istate">Lower State for MECI Calculation:</label>
                 <input type="number" id="istate" value="1" oninput="updateInputPreview()">
